--- a/views/DataPerikanan/index.html
+++ b/views/DataPerikanan/index.html
@@ -12,8 +12,10 @@
   </head>
  
   <body>
-    <div class="container mtt-5">
+    <div class="container mt-5">
         <h3>Data Perikanan Tangkap</h3>
+        <a href="/Data Perikanan/add" class="btn btn-big btn-primary">Menambahkan Data Baru</a>
+        <hr/>
 
         <table class="table table-striped table-hover">
             <thead>
