--- a/views/fishes/edit.html
+++ b/views/fishes/edit.html
@@ -20,7 +20,7 @@
  
   <body>
     <div class="container mt-5">
-        <h3>Tambah Data Perikanan Tangkap</h3>
+        <h3>Edit Data Perikanan Tangkap</h3>
         <a href="/fishes" class="btn btn-big btn-primary">Lihat Data</a>
         <hr/>
 
@@ -31,10 +31,10 @@
         {{ end }}
 
 
-        <form action="/fishes/add" method="post">
+        <form action="/fishes/edit" method="post">
             <div class="form-group">
                 <label for="">Nama Lengkap</label>
-                <input type="text" name="Nama_Lengkap" value="{{ .fishes.NamaLengkap }}" class="form-control {{if .validation.NamaLengkap}} is-invalid {{ end }}">
+                <input type="text" name="Nama_Lengkap" class="form-control {{if .validation.NamaLengkap}} is-invalid {{ end }}">
                 <div class="invalid-feedback">
                 {{ .validation.NamaLengkap }}
                 </div>
@@ -42,51 +42,52 @@
         
             <div class="form-group">
                 <label for="">NIK</label>
-                <input type="text" name="NIK" value="{{ .fishes.NIK }}" class="form-control {{if .validation.NIK}} is-invalid {{ end }}">
+                <input type="text" name="NIK" class="form-control {{if .validation.NIK}} is-invalid {{ end }}">
                 <div class="invalid-feedback">
                     {{ .validation.NIK }}
                     </div>
             </div>
             <div class="form-group">
                 <label for="">Ukuran Kapal</label>
-                <input type="text" name="Ukuran_Kapal" value="{{ .fishes.UkuranKapal }}" class="form-control {{if .validation.UkuranKapal}} is-invalid {{ end }}">
+                <input type="text" name="Ukuran_Kapal" class="form-control {{if .validation.UkuranKapal}} is-invalid {{ end }}">
                 <div class="invalid-feedback">
                     {{ .validation.UkuranKapal }}
                     </div>
             </div>
             <div class="form-group">
                 <label for="">Alat Tangkap</label>
-                <input type="text" name="Alat_Tangkap" value="{{ .fishes.AlatTangkap }}" class="form-control {{if .validation.AlatTangkap}} is-invalid {{ end }}">
+                <input type="text" name="Alat_Tangkap" class="form-control {{if .validation.AlatTangkap}} is-invalid {{ end }}">
                 <div class="invalid-feedback">
                     {{ .validation.AlatTangkap }}
                     </div>
             </div>
             <div class="form-group">
                 <label for="">Jumlah Tangkapan</label>
-                <input type="text" name="Jumlah_Tangkapan" value="{{ .fishes.JumlahTangkapan }}" class="form-control {{if .validation.JumlahTangkapan}} is-invalid {{ end }}">
+                <input type="text" name="Jumlah_Tangkapan" class="form-control {{if .validation.JumlahTangkapan}} is-invalid {{ end }}">
                 <div class="invalid-feedback">
                     {{ .validation.JumlahTangkapan }}
                     </div>
             </div>
             <div class="form-group">
                 <label for="">Alamat</label>
-                <textarea name="Alamat" value="{{ .fishes.Alamat }}" class="form-control {{if .validation.Alamat}} is-invalid {{ end }}"></textarea>
+                <textarea name="Alamat" class="form-control {{if .validation.Alamat}} is-invalid {{ end }}"></textarea>
                 <div class="invalid-feedback">
                     {{ .validation.Alamat }}
                     </div>
             </div>
             <div class="form-group">
                 <label for="">No.Hp</label>
-                <input type="text" name="no_hp" value="{{ .fishes.NoHp }}" class="form-control {{if .validation.NoHp}} is-invalid {{ end }}">
+                <input type="text" name="no_hp" class="form-control {{if .validation.NoHp}} is-invalid {{ end }}">
                 <div class="invalid-feedback">
                     {{ .validation.NoHp }}
                     </div>
             </div>
-            <div class="form-group">
-                <button type="submit" class="btn-btn-primary">Simpan Data</button>
-            </div>
+        <div class="form-group">
+            <input type="hidden" name="id" value="{{ .fishes.Id }}">
+        </div>
+        <button type="submit" class="btn-btn-primary">Edit Data</button>
         </form>
-        
+       
     </div>
 </body>
 </html>
