--- a/views/fishes/add.html
+++ b/views/fishes/add.html
@@ -77,9 +77,9 @@
             </div>
             <div class="form-group">
                 <label for="">No.Hp</label>
-                <input type="text" name="no_hp" value="{{ .fishes.NoHp }}" class="form-control {{if .validation.NoHp}} is-invalid {{ end }}">
+                <input type="text" name="no_hp" value="{{ .fishes.Nohp }}" class="form-control {{if .validation.Nohp}} is-invalid {{ end }}">
                 <div class="invalid-feedback">
-                    {{ .validation.NoHp }}
+                    {{ .validation.Nohp }}
                     </div>
             </div>
             <div class="form-group">
